# cosi-demo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
examples/: kernel_parameter.yaml  mount.yaml  resolver.yaml
hack/: binaries.sh
src/: consts.rs  lib.rs  machinery.rs  process.rs  unix.rs
src/client/: main.rs
src/engine/: main.rs
src/plugins/mount/: main.rs
src/plugins/resolver/: main.rs
src/runtime/: main.rs
tests/: integration_test_engine.rs  integration_test_unix.rs
