[package]
name = "cosi"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true # Enable Link Time Optimization.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort' # Abort on panic.

[lib]
name = "cosi"
path = "./src/lib.rs"

[[bin]]
name = "engine"
path = "./src/engine/main.rs"

[[bin]]
name = "client"
path = "./src/client/main.rs"

[[bin]]
name = "runtime"
path = "./src/runtime/main.rs"

[[bin]]
name = "plugin-mount"
path = "./src/plugins/mount/main.rs"

[[bin]]
name = "plugin-resolver"
path = "./src/plugins/resolver/main.rs"

[dependencies]
futures = "0.3.13"
glob = "0.3.0"
grpc = "0.8.2"
httpbis = { git = "https://github.com/stepancheg/rust-http2" }
nix = "0.20.0"
prost = "0.7.0"
prost-types = "0.7.0"
protobuf = "2.22.0"
rand = "0.5.4"
retry = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8"
tokio = { version = "1.3.0", features = ["fs", "process", "signal"] }
tonic = "0.4.0"
tower = "0.4.6"

[dev-dependencies]
procfs = "0.9.1"

[build-dependencies]
prost-build = "0.7.0"
protoc-rust-grpc = "0.8.2"
tonic-build = "0.4.0"
